	(slime-repl-update-banner): Do not pop to the REPL buffer.

2008-08-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el: Fixing `q' in Xref buffers.

	(slime-popup-buffer-snapshot-unchanged-p): New.
	(slime-popup-buffer-restore-snapshot): New.
	(slime-xref-quit): Can't use slime-popup-buffer directly. Instead
	implement its own quit behaviour using the above functions.

2008-08-08  Helmut Eller  <heller@common-lisp.net>

	Use wait-for-event instead of catch/throw where needed.

	* swank.lisp (read-user-input-from-emacs, y-or-n-p-in-emacs)
	(eval-in-emacs): Use wait-for-event.
	(make-tag): Replaces intern-catch-tag.
	(take-input): Deleted.
	(dispatch-event): Remove some redundancy.

2008-08-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el: Make xref buffers use `slime-with-popup-buffer',
	nee `slime-with-temp-buffer'.

	(slime-with-xref-buffer): Rewritten using a popup buffer.
	(slime-init-xref-buffer): Removed.
	(slime-display-xref-buffer): Removed.

2008-08-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el: Rename slime's temp-buffer to popup-buffer.

2008-08-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-compiler-notes-mode, slime-connection-ist-mode):
	Add slime-temp-buffer-mode-map to docstring.

2008-08-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-connections-buffer-name): New variable.
	(slime-list-connections): Use it.
	(def-slime-selector ?c): Ditto

2008-08-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el: Make the threads browser use `slime-with-temp-buffer'.

	(slime-temp-buffer-quit-function): New buffer-local
	variable. Defaults to `slime-temp-buffer-quit'.
	(slime-temp-buffer-mode): `q' invokes above variable now.

	(slime-threads-buffer-name): New variable.
	(slime-list-threads): Use slime-with-temp-buffer.
	(slime-update-threads-buffer): New. Lifted from
	slime-list-threads.
	(slime-thread-quit): Renamed to slime-quit-threads-buffer.

2008-08-08  Helmut Eller  <heller@common-lisp.net>
